...
    case progress
    case search

    var title: LocalizedStringKey {
        switch self {
        case .home:
            "Home"
        case .learn:
            "Learn"
        case .progress:
            "Progress"
        case .search:
            "Search"
        }
    }

    var symbolName: String {
        switch self {
        case .home:
...
